- Implemented ExpressionDescriptor - Changed default parser Options - The parser now rewrites unspecified ranges so that they can be parsed without exceptions "/N" -> "*/N" - Rewritten localizations to enforce leading white spaces and support Java's String.format() patterns - Added days of the week and months' names to localization resources since we use their ordinals in our enums to identify them and the sequence doesn't match Java's default indices

--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -1,48 +1,67 @@
+SUN=Sunday
+MON=Monday
+TUE=Tuesday
+WED=Wednesday
+THU=Thursday
+FRI=Friday
+SAT=Saturday
+JAN=January
+FEB=February
+MAR=March
+APR=April
+MAY=May
+JUN=June
+JUL=July
+AUG=August
+SEP=September
+OCT=October
+NOV=November
+DEC=December
 EveryMinute=every minute
 EveryHour=every hour
 AnErrorOccuredWhenGeneratingTheExpressionD=An error occured when generating the expression description.  Check the cron expression syntax.
-AtSpace=At 
-EveryMinuteBetweenX0AndX1=Every minute between {0} and {1}
+AtSpace=At\u0020
+EveryMinuteBetweenX0AndX1=Every minute between %s and %s
 At=At
-SpaceAnd= and
+SpaceAnd=\u0020and
 EverySecond=every second
-EveryX0Seconds=every {0} seconds
-SecondsX0ThroughX1PastTheMinute=seconds {0} through {1} past the minute
-AtX0SecondsPastTheMinute=at {0} seconds past the minute
-EveryX0Minutes=every {0} minutes
-MinutesX0ThroughX1PastTheHour=minutes {0} through {1} past the hour
-AtX0MinutesPastTheHour=at {0} minutes past the hour
-EveryX0Hours=every {0} hours
-BetweenX0AndX1=between {0} and {1}
-AtX0=at {0}
+EveryX0Seconds=every %s seconds
+SecondsX0ThroughX1PastTheMinute=seconds %s through %s past the minute
+AtX0SecondsPastTheMinute=at %s seconds past the minute
+EveryX0Minutes=every %s minutes
+MinutesX0ThroughX1PastTheHour=minutes %s through %s past the hour
+AtX0MinutesPastTheHour=at %s minutes past the hour
+EveryX0Hours=every %s hours
+BetweenX0AndX1=between %s and %s
+AtX0=at %s
 ComaEveryDay=, every day
-ComaEveryX0DaysOfTheWeek=, every {0} days of the week
-ComaX0ThroughX1=, {0} through {1}
+ComaEveryX0DaysOfTheWeek=, every %s days of the week
+ComaX0ThroughX1=, %s through %s
 First=first
-Second"=second
+Second=second
 Third=third
 Fourth=fourth
 Fifth=fifth
-ComaOnThe=, on the 
-SpaceX0OfTheMonth={0} of the month
-ComaOnTheLastX0OfTheMonth=, on the last {0} of the month
-ComaOnlyOnX0=, only on {0}
-ComaEveryX0Months=, every {0} months
-ComaOnlyInX0=, only in {0}
+ComaOnTheSpace=, on the\u0020
+SpaceX0OfTheMonth=\u0020%s of the month
+ComaOnTheLastX0OfTheMonth=, on the last %s of the month
+ComaOnlyOnX0=, only on %s
+ComaEveryX0Months=, every %s months
+ComaOnlyInX0=, only in %s
 ComaOnTheLastDayOfTheMonth=, on the last day of the month
 ComaOnTheLastWeekdayOfTheMonth=, on the last weekday of the month
 FirstWeekday=first weekday
-WeekdayNearestDayX0=weekday nearest day {0}
-ComaOnTheX0OfTheMonth=, on the {0} of the month
-ComaEveryX0Days=, every {0} days
-ComaBetweenDayX0AndX1OfTheMonth=, between day {0} and {1} of the month
-ComaOnDayX0OfTheMonth=, on day {0} of the month
-SpaceAndSpace= and 
+WeekdayNearestDayX0=weekday nearest day %s
+ComaOnTheX0OfTheMonth=, on the %s of the month
+ComaEveryX0Days=, every %s days
+ComaBetweenDayX0AndX1OfTheMonth=, between day %s and %s of the month
+ComaOnDayX0OfTheMonth=, on day %s of the month
+SpaceAndSpace=\u0020and\u0020
 ComaEveryMinute=, every minute
 ComaEveryHour=, every hour
-ComaEveryX0Years=, every {0} years
-CommaStartingX0=, starting {0}
+ComaEveryX0Years=, every %s years
+CommaStartingX0=, starting %s
 AMPeriod=AM
 PMPeriod=PM
-CommaDaysBeforeTheLastDayOfTheMonth=, {0} days before the last day of the month
-ComaOnlyInYearX0=, only in {0}
+CommaDaysBeforeTheLastDayOfTheMonth=, %s days before the last day of the month
+ComaOnlyInYearX0=, only in %s
