- Added maven publishing task and cleaned up build.gradle - Fixed typo in the italian localization_it.properties

--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Module data
 group 'it.burning'
 version '1.0-SNAPSHOT'
 
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Build dependencies
 buildscript {
     // Extra properties (valid for all projects if defined here)
@@ -23,26 +23,28 @@ buildscript {
     }
 }
 
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-// Plugins
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// Plugins and defaults
 apply plugin: 'java'
 apply plugin: 'java-library'
 apply plugin: 'idea'
+apply plugin: 'maven-publish'
 
-// Override output directories
-idea{
-    module{
+idea {
+    module {
+        // Override output directories
         inheritOutputDirs = false
         outputDir = compileJava.destinationDir
         testOutputDir = compileTestJava.destinationDir
     }
 }
 
-// Compatibility
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+compileJava {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Repositories
 repositories {
     // Maven
@@ -53,7 +55,13 @@ repositories {
     maven { url "https://oss.sonatype.org/content/repositories/releases/" }
 }
 
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// Dependencies
+dependencies {
+    testImplementation("org.junit.jupiter:junit-jupiter:$junitJupiterVersion")
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Compiler flags
 gradle.projectsEvaluated {
     tasks.withType(JavaCompile) {
@@ -65,12 +73,23 @@ gradle.projectsEvaluated {
     }
 }
 
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Unit testing
-dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter:$junitJupiterVersion")
-}
-
 test {
     useJUnitPlatform()
+}
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// Publishing
+publishing {
+    repositories {
+        maven {
+            name = "OSSRH"
+            url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+            credentials {
+                username = System.getenv("MAVEN_USERNAME")
+                password = System.getenv("MAVEN_PASSWORD")
+            }
+        }
+    }
 }
