--- a/build.gradle
+++ b/build.gradle
@@ -85,10 +85,44 @@ publishing {
     repositories {
         maven {
             name = "OSSRH"
-            url = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+
             credentials {
                 username = System.getenv("MAVEN_USERNAME")
                 password = System.getenv("MAVEN_PASSWORD")
+            }
+        }
+    }
+
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'it.burning'
+            artifactId = 'cron-expression-descriptor'
+            version = '1.0'
+
+            from components.java
+
+            pom {
+                name = 'Cron Expression Descriptor'
+                description = 'A Java library that converts cron expressions into human readable descriptions'
+                url = 'https://github.com/voidburn/cron-expression-descriptor'
+
+                licenses {
+                    license {
+                        name = 'MIT'
+                        url = 'https://github.com/voidburn/cron-expression-descriptor/blob/master/LICENSE'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'voidburn'
+                        name = 'Luca Vignaroli'
+                        email = 'luca@burning.it'
+                    }
+                }
             }
         }
     }
