Added new localizations

--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -17,51 +17,51 @@ SEP=September
 OCT=October
 NOV=November
 DEC=December
-EveryMinute=every minute
-EveryHour=every hour
-AnErrorOccuredWhenGeneratingTheExpressionD=An error occured when generating the expression description.  Check the cron expression syntax.
+EveryMinute=every\u0020minute
+EveryHour=every\u0020hour
+AnErrorOccuredWhenGeneratingTheExpressionD=An\u0020error\u0020occured\u0020when\u0020generating\u0020the\u0020expression\u0020description.\u0020\u0020Check\u0020the\u0020cron\u0020expression\u0020syntax.
 AtSpace=At\u0020
-EveryMinuteBetweenX0AndX1=Every minute between %s and %s
+EveryMinuteBetweenX0AndX1=Every\u0020minute\u0020between\u0020%s\u0020and\u0020%s
 At=At
 SpaceAnd=\u0020and
-EverySecond=every second
-EveryX0Seconds=every %s seconds
-SecondsX0ThroughX1PastTheMinute=seconds %s through %s past the minute
-AtX0SecondsPastTheMinute=at %s seconds past the minute
-EveryX0Minutes=every %s minutes
-MinutesX0ThroughX1PastTheHour=minutes %s through %s past the hour
-AtX0MinutesPastTheHour=at %s minutes past the hour
-EveryX0Hours=every %s hours
-BetweenX0AndX1=between %s and %s
-AtX0=at %s
-ComaEveryDay=, every day
-ComaEveryX0DaysOfTheWeek=, every %s days of the week
-ComaX0ThroughX1=, %s through %s
+EverySecond=every\u0020second
+EveryX0Seconds=every\u0020%s\u0020seconds
+SecondsX0ThroughX1PastTheMinute=seconds\u0020%s\u0020through\u0020%s\u0020past\u0020the\u0020minute
+AtX0SecondsPastTheMinute=at\u0020%s\u0020seconds\u0020past\u0020the\u0020minute
+EveryX0Minutes=every\u0020%s\u0020minutes
+MinutesX0ThroughX1PastTheHour=minutes\u0020%s\u0020through\u0020%s\u0020past\u0020the\u0020hour
+AtX0MinutesPastTheHour=at\u0020%s\u0020minutes\u0020past\u0020the\u0020hour
+EveryX0Hours=every\u0020%s\u0020hours
+BetweenX0AndX1=between\u0020%s\u0020and\u0020%s
+AtX0=at\u0020%s
+ComaEveryDay=,\u0020every\u0020day
+ComaEveryX0DaysOfTheWeek=,\u0020every\u0020%s\u0020days\u0020of\u0020the\u0020week
+ComaX0ThroughX1=,\u0020%s\u0020through\u0020%s
 First=first
 Second=second
 Third=third
 Fourth=fourth
 Fifth=fifth
-ComaOnTheSpace=, on the\u0020
-SpaceX0OfTheMonth=\u0020%s of the month
-ComaOnTheLastX0OfTheMonth=, on the last %s of the month
-ComaOnlyOnX0=, only on %s
-ComaEveryX0Months=, every %s months
-ComaOnlyInX0=, only in %s
-ComaOnTheLastDayOfTheMonth=, on the last day of the month
-ComaOnTheLastWeekdayOfTheMonth=, on the last weekday of the month
-FirstWeekday=first weekday
-WeekdayNearestDayX0=weekday nearest day %s
-ComaOnTheX0OfTheMonth=, on the %s of the month
-ComaEveryX0Days=, every %s days
-ComaBetweenDayX0AndX1OfTheMonth=, between day %s and %s of the month
-ComaOnDayX0OfTheMonth=, on day %s of the month
+ComaOnTheSpace=,\u0020on\u0020the\u0020
+SpaceX0OfTheMonth=\u0020%s\u0020of\u0020the\u0020month
+ComaOnTheLastX0OfTheMonth=,\u0020on\u0020the\u0020last\u0020%s\u0020of\u0020the\u0020month
+ComaOnlyOnX0=,\u0020only\u0020on\u0020%s
+ComaEveryX0Months=,\u0020every\u0020%s\u0020months
+ComaOnlyInX0=,\u0020only\u0020in\u0020%s
+ComaOnTheLastDayOfTheMonth=,\u0020on\u0020the\u0020last\u0020day\u0020of\u0020the\u0020month
+ComaOnTheLastWeekdayOfTheMonth=,\u0020on\u0020the\u0020last\u0020weekday\u0020of\u0020the\u0020month
+FirstWeekday=first\u0020weekday
+WeekdayNearestDayX0=weekday\u0020nearest\u0020day\u0020%s
+ComaOnTheX0OfTheMonth=,\u0020on\u0020the\u0020%s\u0020of\u0020the\u0020month
+ComaEveryX0Days=,\u0020every\u0020%s\u0020days
+ComaBetweenDayX0AndX1OfTheMonth=,\u0020between\u0020day\u0020%s\u0020and\u0020%s\u0020of\u0020the\u0020month
+ComaOnDayX0OfTheMonth=,\u0020on\u0020day\u0020%s\u0020of\u0020the\u0020month
 SpaceAndSpace=\u0020and\u0020
-ComaEveryMinute=, every minute
-ComaEveryHour=, every hour
-ComaEveryX0Years=, every %s years
-CommaStartingX0=, starting %s
+ComaEveryMinute=,\u0020every\u0020minute
+ComaEveryHour=,\u0020every\u0020hour
+ComaEveryX0Years=,\u0020every\u0020%s\u0020years
+CommaStartingX0=,\u0020starting\u0020%s
 AMPeriod=AM
 PMPeriod=PM
-CommaDaysBeforeTheLastDayOfTheMonth=, %s days before the last day of the month
-ComaOnlyInYearX0=, only in %s
+CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020days\u0020before\u0020the\u0020last\u0020day\u0020of\u0020the\u0020month
+ComaOnlyInYearX0=,\u0020only\u0020in\u0020%s
