--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 group "it.burning"
-version '1.0.3-SNAPSHOT'
+version '1.1'
 
 idea {
     module {
