--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Publish package
         run: ./gradlew publish
         env:
